Add all dependencies